# ChangeLog for kde-base/kdeadmin
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeadmin/ChangeLog,v 1.15 2002/12/21 14:02:39 hannes Exp $

*kdeadmin-3.0.5a (21 Dec 2002)

  21 Dec 2002; Hannes Mehnert <hannes@gentoo.org> kdeadmin-3.0.5a.ebuild:
  version bump
  
  08 Dec 2002; Jack Morgan <jmorgan@gentoo.org> kdeadmin-3.1_rc5.ebuild :
  Added sparc keyword

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
  04 Dec 2002; Olivier Reisch <doctomoe@gentoo.org> kdeadmin-3.1.ebuild:
  Added ppc keyword

*kdeadmin-3.1_rc3 (12 Nov 2002)

  12 Nov 2002; Hannes Mehnert <hannes@gentoo.org> ChangeLog:
  kde-3.1_rc3

*kdeadmin-3.1_rc2 (04 Nov 2002)

  04 Nov 2002; Hannes Mehnert <hannes@gentoo.org> ChangeLog:
  kde-3.1_rc2

*kdeadmin-3.0.4 (09 Oct 2002)

  09 Oct 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :

  KDE 3.0.4, the latest bugfix release.

*kdeadmin-3.0.3 (19 Aug 2002)

  19 Aug 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :

  New bugfix release. Enjoy!

*kdeadmin-3.0.2 (03 Jul 2002)

  01 Aug 2002; Mark Guertin <gerk@gentoo.org> kde-3.0.2.ebuild :
  Added ppc to keywords

  03 Jul 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  : : :

  New stability release.

*kdeadmin-3.0.1.20020604 (4 Jun 2002)

  4 Jun 2002; Dan Armak <danarmak@gentoo.org> Changelog :

  This is a snapshot of the KDE CVS's KDE_3_0_x branch from June 6th.
  This branch contains only bugfixes to the 3.0 release (the 3.0.1 release
  was also of this kind).

*kdeadmin-3.0.1 (24 May 2002)

  24 May 2002; Dan Armak <danarmak@gentoo.org> Changelog :

  Bugfix release (KDE 3.0.1). Bump rpm dep to 4.0.4-r1, which fixes some ilbpopt problems.

*kdeadmin-3.0 (4 Apr 2002)

  4 Apr 2002; Dan Armak <danarmak@gentoo.org> Changelog :

  KDE 3.0 ebuilds. Based on the well-tested kde3pre ebuild set.

*kdeadmin-2.2.2 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  