@@ -1,12 +1,13 @@
 # Copyright 1999-2001 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeadmin/kdeadmin-3.1_rc5.ebuild,v 1.2 2002/12/09 14:24:27 jmorgan Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeadmin/kdeadmin-3.1_rc5.ebuild,v 1.3 2002/12/21 19:28:35 hannes Exp $
 inherit kde-dist 
 
 IUSE="pam"
 DESCRIPTION="KDE administration tools (user manager, etc.)"
-
+PATCHES="${FILESDIR}/${P}-gentoo.diff"
 KEYWORDS="x86 ppc sparc"
+PATCHES="${FILESDIR}/${PN}-qt311-gentoo.diff"
 
 newdepend ">=app-arch/rpm-4.0.4-r1
 	dev-libs/popt
